fix editor crashes, add body rotation to editor, add tidal locking

--- a/src/data/galileo_configs.json
+++ b/src/data/galileo_configs.json
@@ -46,6 +46,7 @@
 		"name":"Eta",
 		"radius":"60000",
 		"geeASL":"0.05",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"11300000",
 		"eccentricity":"0.06",
@@ -99,6 +100,7 @@
 		"name":"Iota",
 		"radius":"100000",
 		"geeASL":"0.085",
+		"tidallyLocked":"true",
 		"initialRotation":"237",
 		"semiMajorAxis":"28000000",
 		"eccentricity":"0",
@@ -115,6 +117,7 @@
 		"name":"Ceti",
 		"radius":"150000",
 		"geeASL":"0.135",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"55000000",
 		"eccentricity":"0.05",
@@ -150,6 +153,7 @@
 		"radius":"7000",
 		"geeASL":"0.015",
 		"soi":"40000",
+		"tidallyLocked":"true",
 		"initialRotation":"320",
 		"semiMajorAxis":"1455000",
 		"eccentricity":"0",
@@ -184,6 +188,7 @@
 		"name":"Geminus",
 		"radius":"230000",
 		"geeASL":"0.22",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"10300000",
 		"eccentricity":"0.025",
@@ -219,6 +224,7 @@
 		"radius":"350000",
 		"atmosphereHeight":"60000",
 		"geeASL":"0.35",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"20000000",
 		"eccentricity":"0.005",
@@ -235,6 +241,7 @@
 		"name":"Hephaestus",
 		"radius":"125000",
 		"geeASL":"0.08",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"32000000",
 		"eccentricity":"0.01",
@@ -251,6 +258,7 @@
 		"name":"Jannah",
 		"radius":"105000",
 		"geeASL":"0.065",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"65000000",
 		"eccentricity":"0.075",
@@ -285,6 +293,7 @@
 		"name":"Loki",
 		"radius":"180000",
 		"geeASL":"0.1",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"18500000",
 		"eccentricity":"0.02",
@@ -302,6 +311,7 @@
 		"radius":"1200000",
 		"atmosphereHeight":"280000",
 		"geeASL":"0.9",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"57000000",
 		"eccentricity":"0",
@@ -319,6 +329,7 @@
 		"radius":"320000",
 		"atmosphereHeight":"130000",
 		"geeASL":"0.17",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"6000000",
 		"eccentricity":"0",
@@ -354,6 +365,7 @@
 		"radius":"300000",
 		"atmosphereHeight":"80000",
 		"geeASL":"0.18",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"30000000",
 		"eccentricity":"0.01",
@@ -370,6 +382,7 @@
 		"name":"Narisse",
 		"radius":"90000",
 		"geeASL":"0.04",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"48000000",
 		"eccentricity":"0.015",
@@ -386,6 +399,7 @@
 		"name":"Muse",
 		"radius":"130000",
 		"geeASL":"0.08",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"80000000",
 		"eccentricity":"0.005",
@@ -402,6 +416,7 @@
 		"name":"Minona",
 		"radius":"120000",
 		"geeASL":"0.06",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"135000000",
 		"eccentricity":"0.02",
@@ -470,6 +485,7 @@
 		"name":"Argo",
 		"radius":"80000",
 		"geeASL":"0.035",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"12500000",
 		"eccentricity":"0",
