--- a/src/data/jnsq_configs.json
+++ b/src/data/jnsq_configs.json
@@ -47,6 +47,7 @@
 		"name":"Gilly",
 		"radius":"30000",
 		"geeASL":"0.0075",
+		"tidallyLocked":"True",
 		"initialRotation":"270",
 		"semiMajorAxis":"86920000",
 		"eccentricity":"0.55",
@@ -82,7 +83,9 @@
 		"name":"Mun",
 		"radius":"400000",
 		"geeASL":"0.145",
+		"tidallyLocked":"True",
 		"initialRotation":"30",
+		"semiMajorAxis":"90960000",
 		"eccentricity":"0.005",
 		"inclination":"0.5",
 		"argOfPeriapsis":"165",
@@ -97,6 +100,7 @@
 		"name":"Minmus",
 		"radius":"160000",
 		"geeASL":"0.05",
+		"rotationPeriod":"32400",
 		"initialRotation":"240",
 		"eccentricity":"0.03",
 		"inclination":"6",
@@ -163,6 +167,7 @@
 		"name":"Dak",
 		"radius":"20000",
 		"geeASL":"0.008",
+		"tidallyLocked":"True",
 		"initialRotation":"30",
 		"semiMajorAxis":"4770000",
 		"eccentricity":"0.01",
@@ -215,6 +220,7 @@
 		"radius":"1100000",
 		"atmosphereHeight":"75000",
 		"geeASL":"0.58",
+		"tidallyLocked":"True",
 		"initialRotation":"240",
 		"semiMajorAxis":"87640000",
 		"eccentricity":"0.01",
@@ -231,6 +237,7 @@
 		"name":"Vall",
 		"radius":"550000",
 		"geeASL":"0.18",
+		"tidallyLocked":"True",
 		"initialRotation":"0",
 		"semiMajorAxis":"160230000",
 		"eccentricity":"0.03",
@@ -248,6 +255,7 @@
 		"radius":"900000",
 		"atmosphereHeight":"85000",
 		"geeASL":"0.32",
+		"tidallyLocked":"True",
 		"initialRotation":"165",
 		"semiMajorAxis":"292950000",
 		"eccentricity":"0.01",
@@ -264,10 +272,14 @@
 		"name":"Bop",
 		"radius":"190000",
 		"geeASL":"0.05",
+		"tidallyLocked":"True",
 		"initialRotation":"125",
 		"semiMajorAxis":"582970000",
 		"eccentricity":"0.235",
-		"meanAnomalyEpoch":"NaN",
+		"inclination":"15",
+		"argOfPeriapsis":"25",
+		"ascNodeLongitude":"10",
+		"meanAnomalyEpoch":"4.71238898038469",
 		"epoch":"0",
 		"color":"0.366,0.315,0.248,0.5",
 		"referenceBody":"Jool",
@@ -312,6 +324,7 @@
 		"name":"Krel",
 		"radius":"150000",
 		"geeASL":"0.03",
+		"tidallyLocked":"True",
 		"initialRotation":"60",
 		"semiMajorAxis":"58600000",
 		"eccentricity":"0.02",
@@ -328,6 +341,7 @@
 		"name":"Aden",
 		"radius":"300000",
 		"geeASL":"0.07",
+		"tidallyLocked":"True",
 		"initialRotation":"240",
 		"semiMajorAxis":"107140000",
 		"eccentricity":"0.01",
@@ -345,6 +359,7 @@
 		"radius":"670000",
 		"atmosphereHeight":"180000",
 		"geeASL":"0.15",
+		"tidallyLocked":"True",
 		"initialRotation":"120",
 		"semiMajorAxis":"187500000",
 		"eccentricity":"0.025",
@@ -362,6 +377,7 @@
 		"radius":"750000",
 		"atmosphereHeight":"90000",
 		"geeASL":"0.18",
+		"tidallyLocked":"True",
 		"initialRotation":"195",
 		"semiMajorAxis":"309380000",
 		"eccentricity":"0.03",
@@ -378,6 +394,7 @@
 		"name":"Talos",
 		"radius":"500000",
 		"geeASL":"0.11",
+		"tidallyLocked":"True",
 		"initialRotation":"15",
 		"semiMajorAxis":"575680000",
 		"eccentricity":"0.04",
@@ -412,6 +429,7 @@
 		"name":"Celes",
 		"radius":"200000",
 		"geeASL":"0.04",
+		"tidallyLocked":"True",
 		"initialRotation":"190",
 		"semiMajorAxis":"31800000",
 		"eccentricity":"0.05",
@@ -428,6 +446,7 @@
 		"name":"Tam",
 		"radius":"10000",
 		"geeASL":"0.0035",
+		"tidallyLocked":"True",
 		"initialRotation":"315",
 		"semiMajorAxis":"64670000",
 		"eccentricity":"0.025",
