--- a/src/data/ksrss_configs.json
+++ b/src/data/ksrss_configs.json
@@ -60,6 +60,7 @@
 		"name":"Moon",
 		"radius":"163600",
 		"geeASL":"0.166",
+		"tidallyLocked":"true",
 		"rotationPeriod":"590146.171199998",
 		"initialRotation":"98.102",
 		"semiMajorAxis":"36194051.4005186",
@@ -109,6 +110,7 @@
 		"name":"Phobos",
 		"radius":"7250",
 		"mass":"1.072E+16",
+		"tidallyLocked":"true",
 		"rotationPeriod":"6888.460968",
 		"initialRotation":"0",
 		"semiMajorAxis":"1766471.613703651",
@@ -125,6 +127,7 @@
 		"name":"Deimos",
 		"radius":"5456",
 		"mass":"1.48E+15",
+		"tidallyLocked":"true",
 		"rotationPeriod":"27280.8",
 		"initialRotation":"0",
 		"semiMajorAxis":"4418416.95512676",
@@ -206,6 +209,7 @@
 		"name":"Io",
 		"radius":"170587.68",
 		"geeASL":"0.183",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"39745554.2026",
 		"eccentricity":"0.003545858426216978",
 		"inclination":"0.05",
@@ -220,6 +224,7 @@
 		"name":"Europa",
 		"radius":"146054",
 		"geeASL":"0.134",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"63218462.7559",
 		"eccentricity":"0.009511727119926178",
 		"inclination":"0.47",
@@ -234,6 +239,7 @@
 		"name":"Ganymede",
 		"radius":"247136.937276323",
 		"geeASL":"0.146",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"100849827.547045018",
 		"eccentricity":"0.001190086418361844",
 		"inclination":"0.2",
@@ -248,6 +254,7 @@
 		"name":"Callisto",
 		"radius":"226907.14",
 		"geeASL":"0.126",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"177416873.8532",
 		"eccentricity":"0.007973319796896609",
 		"inclination":"0.192",
@@ -279,6 +286,7 @@
 		"name":"Mimas",
 		"radius":"18666.4155",
 		"geeASL":"0.0065",
+		"tidallyLocked":"true",
 		"rotationPeriod":"20347.2",
 		"initialRotation":"0",
 		"semiMajorAxis":"17518297.7889",
@@ -295,6 +303,7 @@
 		"name":"Enceladus",
 		"radius":"23742.7",
 		"geeASL":"0.0113",
+		"tidallyLocked":"true",
 		"rotationPeriod":"29596.7088",
 		"initialRotation":"0",
 		"semiMajorAxis":"22453729.4673",
@@ -311,6 +320,7 @@
 		"name":"Tethys",
 		"radius":"50018",
 		"geeASL":"0.015",
+		"tidallyLocked":"true",
 		"rotationPeriod":"40776.5232",
 		"initialRotation":"0",
 		"semiMajorAxis":"27780510.6781",
@@ -327,6 +337,7 @@
 		"name":"Dione",
 		"radius":"52872.48",
 		"geeASL":"0.0236",
+		"tidallyLocked":"true",
 		"rotationPeriod":"59117.364",
 		"initialRotation":"0",
 		"semiMajorAxis":"35567023.1213",
@@ -343,6 +354,7 @@
 		"name":"Rhea",
 		"radius":"71934.45",
 		"geeASL":"0.0269",
+		"tidallyLocked":"true",
 		"rotationPeriod":"97593.3792",
 		"initialRotation":"0",
 		"semiMajorAxis":"49652726.0979",
@@ -360,6 +372,7 @@
 		"radius":"242352.6",
 		"atmosphereHeight":"84000",
 		"geeASL":"0.14",
+		"tidallyLocked":"true",
 		"rotationPeriod":"344412",
 		"initialRotation":"0",
 		"semiMajorAxis":"115084407.4695",
@@ -376,6 +389,7 @@
 		"name":"Iapetus",
 		"radius":"69174.99",
 		"geeASL":"0.0228",
+		"tidallyLocked":"true",
 		"rotationPeriod":"1713344.4",
 		"initialRotation":"0",
 		"semiMajorAxis":"335295026.655",
@@ -425,6 +439,7 @@
 		"name":"Miranda",
 		"radius":"22198.15",
 		"geeASL":"0.008",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"12232063.2543",
 		"eccentricity":"0.00118741261963413",
@@ -440,6 +455,7 @@
 		"name":"Ariel",
 		"radius":"54520.63",
 		"geeASL":"0.027",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"17983081.9813",
 		"eccentricity":"0.00190951361476287",
@@ -455,6 +471,7 @@
 		"name":"Umbriel",
 		"radius":"55066.87",
 		"geeASL":"0.023",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"25051079.3113",
 		"eccentricity":"0.0038334454580725",
@@ -470,6 +487,7 @@
 		"name":"Titania",
 		"radius":"74298.36",
 		"geeASL":"0.0386",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"41089911.750584197",
 		"eccentricity":"0.002486916",
@@ -485,6 +503,7 @@
 		"name":"Oberon",
 		"radius":"71708.42",
 		"geeASL":"0.035",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"54947761.1924",
 		"eccentricity":"0.00110558297330948",
@@ -517,6 +536,7 @@
 		"name":"Triton",
 		"radius":"127462.8",
 		"geeASL":"0.0794",
+		"tidallyLocked":"true",
 		"rotationPeriod":"126943.25",
 		"initialRotation":"0",
 		"semiMajorAxis":"33411870.742198597",
@@ -549,6 +569,7 @@
 		"name":"Charon",
 		"radius":"56837.45",
 		"geeASL":"0.029",
+		"tidallyLocked":"true",
 		"rotationPeriod":"137964.17664",
 		"initialRotation":"0",
 		"semiMajorAxis":"1845563.555792425",
