--- a/src/data/opm_configs.json
+++ b/src/data/opm_configs.json
@@ -4,8 +4,6 @@
 		"name":"Sun",
 		"radius":"261600000",
 		"atmosphereHeight":"600000",
-		"geeASL":"1.7468465687012686",
-		"mass":"1172332800000000000",
 		"stdGravParam":"1172332800000000000",
 		"rotationPeriod":"432000",
 		"color":"rgba(254,198,20,1)",
@@ -19,7 +17,6 @@
 		"geeASL":"0.2750939495138503",
 		"mass":"2.5263314e+21",
 		"stdGravParam":"168609380000",
-		"soi":"9646663",
 		"rotationPeriod":"1210000",
 		"initialRotation":"190",
 		"semiMajorAxis":"5263138304",
@@ -42,7 +39,6 @@
 		"geeASL":"1.700580770004361",
 		"mass":"1.224398e+23",
 		"stdGravParam":"8171730200000",
-		"soi":"85109365",
 		"rotationPeriod":"80500",
 		"semiMajorAxis":"9832684544",
 		"eccentricity":"0.01",
@@ -63,7 +59,6 @@
 		"geeASL":"0.005001707903980263",
 		"mass":"124203630000000000",
 		"stdGravParam":"8289449.8",
-		"soi":"126123.27",
 		"rotationPeriod":"28255",
 		"initialRotation":"5",
 		"semiMajorAxis":"31500000",
@@ -86,7 +81,6 @@
 		"geeASL":"1.0003416049313476",
 		"mass":"5.2915158e+22",
 		"stdGravParam":"3531600000000",
-		"soi":"84159286",
 		"rotationPeriod":"21549.42518309",
 		"initialRotation":"90",
 		"semiMajorAxis":"13599840256",
@@ -108,7 +102,7 @@
 		"geeASL":"0.16605670132002265",
 		"mass":"975990660000000000000",
 		"stdGravParam":"65138398000",
-		"soi":"2429559.1",
+		"tidallyLocked": "true",
 		"rotationPeriod":"138984.376574476",
 		"initialRotation":"230",
 		"semiMajorAxis":"12000000",
@@ -130,7 +124,6 @@
 		"geeASL":"0.05001708024656738",
 		"mass":"26457580000000000000",
 		"stdGravParam":"1765800000",
-		"soi":"2247428.4",
 		"rotationPeriod":"40400",
 		"initialRotation":"230",
 		"semiMajorAxis":"47000000",
@@ -153,7 +146,6 @@
 		"geeASL":"0.30010249143757045",
 		"mass":"4.515427e+21",
 		"stdGravParam":"301363210000",
-		"soi":"47921949",
 		"rotationPeriod":"65517.859375",
 		"initialRotation":"90",
 		"semiMajorAxis":"20726155264",
@@ -173,6 +165,7 @@
 		"radius":"130000",
 		"maxTerrainHeight":"12738",
 		"geeASL":"0.11203826578613468",
+		"tidallyLocked": "true",
 		"mass":"278216150000000000000",
 		"stdGravParam":"18568369000",
 		"soi":"1049598.9",
@@ -196,7 +189,6 @@
 		"geeASL":"0.11503928670891597",
 		"mass":"321909370000000000000",
 		"stdGravParam":"21484489000",
-		"soi":"32832840",
 		"rotationPeriod":"34800",
 		"initialRotation":"25",
 		"semiMajorAxis":"40839348203",
@@ -218,7 +210,6 @@
 		"geeASL":"0.8002732839450781",
 		"mass":"4.2332127e+24",
 		"stdGravParam":"282528000000000",
-		"soi":"2455985200",
 		"rotationPeriod":"36000",
 		"semiMajorAxis":"68773560320",
 		"eccentricity":"0.05",
@@ -240,7 +231,7 @@
 		"geeASL":"0.8002732839450781",
 		"mass":"2.9397311e+22",
 		"stdGravParam":"1962000000000",
-		"soi":"3723645.8",
+		"tidallyLocked": "true",
 		"rotationPeriod":"52980.87905938",
 		"initialRotation":"90",
 		"semiMajorAxis":"27184000",
@@ -262,7 +253,7 @@
 		"geeASL":"0.23508027715886667",
 		"mass":"3.1087655e+21",
 		"stdGravParam":"207481500000",
-		"soi":"2406401.4",
+		"tidallyLocked": "true",
 		"rotationPeriod":"105962.088893924",
 		"semiMajorAxis":"43152000",
 		"eccentricity":"0",
@@ -283,7 +274,7 @@
 		"geeASL":"0.8002732839450781",
 		"mass":"4.2332127e+22",
 		"stdGravParam":"2825280000000",
-		"soi":"10856518",
+		"tidallyLocked": "true",
 		"rotationPeriod":"211926.35802123",
 		"semiMajorAxis":"68500000",
 		"eccentricity":"0",
@@ -304,7 +295,7 @@
 		"geeASL":"0.06002049388235136",
 		"mass":"37261090000000000000",
 		"stdGravParam":"2486834900",
-		"soi":"1221060.9",
+		"tidallyLocked": "true",
 		"rotationPeriod":"544507.428516654",
 		"initialRotation":"230",
 		"semiMajorAxis":"128500000",
@@ -326,7 +317,7 @@
 		"geeASL":"0.03801298098739121",
 		"mass":"10813507000000000000",
 		"stdGravParam":"721702080",
-		"soi":"1042138.9",
+		"tidallyLocked": "true",
 		"rotationPeriod":"901902.623531173",
 		"initialRotation":"25",
 		"semiMajorAxis":"179890000",
@@ -363,6 +354,8 @@
 		"radius":"6000",
 		"geeASL":"0.0023",
 		"soi":"41000",
+		"tidallyLocked":"True",
+		"initialRotation":"0",
 		"semiMajorAxis":"10488231",
 		"eccentricity":"0",
 		"inclination":"1",
@@ -379,6 +372,7 @@
 		"radius":"26000",
 		"geeASL":"0.002",
 		"soi":"94000",
+		"tidallyLocked":"True",
 		"initialRotation":"230",
 		"semiMajorAxis":"12169413",
 		"eccentricity":"0.01",
@@ -393,6 +387,7 @@
 	},
 	{
 		"name": "Eeloo",
+		"tidallyLocked":"True",
 		"semiMajorAxis": 19105978,
 		"eccentricity": 0.0034,
 		"inclination": 2.3,
@@ -404,6 +399,7 @@
 		"name":"Slate",
 		"radius":"540000",
 		"geeASL":"0.692",
+		"tidallyLocked":"True",
 		"semiMajorAxis":"42592946",
 		"eccentricity":"0.04",
 		"inclination":"2.3",
@@ -420,6 +416,7 @@
 		"radius":"280000",
 		"atmosphereHeight":"95000.0",
 		"geeASL":"0.2503",
+		"tidallyLocked":"True",
 		"semiMajorAxis":"97355304",
 		"eccentricity":"0.028",
 		"inclination":"9.4",
@@ -453,6 +450,7 @@
 		"name":"Polta",
 		"radius":"220000",
 		"geeASL":"0.19",
+		"tidallyLocked":"True",
 		"semiMajorAxis":"11727895",
 		"eccentricity":"0.0015",
 		"inclination":"2.45",
@@ -468,6 +466,7 @@
 		"name":"Priax",
 		"radius":"74000",
 		"geeASL":"0.063",
+		"tidallyLocked":"True",
 		"initialRotation":"30",
 		"semiMajorAxis":"11727895",
 		"eccentricity":"0.0015",
@@ -484,6 +483,7 @@
 		"name":"Wal",
 		"radius":"370000",
 		"geeASL":"0.37",
+		"tidallyLocked":"True",
 		"semiMajorAxis":"67553668",
 		"eccentricity":"0.023",
 		"inclination":"1.9",
@@ -499,6 +499,7 @@
 		"name":"Tal",
 		"radius":"22000",
 		"geeASL":"0.045",
+		"tidallyLocked":"True",
 		"rotationPeriod":"36134.589375",
 		"initialRotation":"0",
 		"semiMajorAxis":"3109163",
@@ -535,6 +536,7 @@
 		"radius":"286000",
 		"atmosphereHeight":"35000.0",
 		"geeASL":"0.232",
+		"tidallyLocked":"True",
 		"initialRotation":"0",
 		"semiMajorAxis":"32300895",
 		"eccentricity":"0.00043",
@@ -584,6 +586,7 @@
 		"name":"Karen",
 		"radius":"85050",
 		"geeASL":"0.066",
+		"tidallyLocked":"True",
 		"semiMajorAxis":"2457800",
 		"eccentricity":"0",
 		"inclination":"0",
