--- a/src/data/rss_configs.json
+++ b/src/data/rss_configs.json
@@ -63,6 +63,7 @@
 		"name":"Moon",
 		"radius":"1737100",
 		"stdGravParam":"4.9028000661637961e+12",
+		"tidallyLocked":"true",
 		"rotationPeriod":"2360584.68479999",
 		"initialRotation":"25",
 		"semiMajorAxis":"384308437.7707066",
@@ -98,6 +99,7 @@
 		"name":"Phobos",
 		"radius":"7250",
 		"stdGravParam":"7.087546066894452e+5",
+		"tidallyLocked":"true",
 		"rotationPeriod":"27553.843872",
 		"initialRotation":"0",
 		"semiMajorAxis":"9378492.209088314",
@@ -115,6 +117,7 @@
 		"name":"Deimos",
 		"radius":"5456",
 		"stdGravParam":"9.615569648120313e+4",
+		"tidallyLocked":"true",
 		"rotationPeriod":"109123.2",
 		"initialRotation":"0",
 		"semiMajorAxis":"23458112.01759387",
@@ -184,6 +187,7 @@
 		"name":"Io",
 		"radius":"1811300",
 		"stdGravParam":"5.959916033410404e+12",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"422018294.5236953",
 		"eccentricity":"0.003545858426216978",
 		"inclination":"25.46409538664874",
@@ -199,6 +203,7 @@
 		"name":"Europa",
 		"radius":"1550800",
 		"stdGravParam":"3.202738774922892e+12",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"671253637.5417169",
 		"eccentricity":"0.009511727119926178",
 		"inclination":"25.70364276471991",
@@ -214,6 +219,7 @@
 		"name":"Ganymede",
 		"radius":"2624100",
 		"stdGravParam":"9.887834453334144e+12",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"1070823468.894524",
 		"eccentricity":"0.001190086418361844",
 		"inclination":"25.27071366962049",
@@ -229,6 +235,7 @@
 		"name":"Callisto",
 		"radius":"2409300",
 		"stdGravParam":"7.179289361397270e+12",
+		"tidallyLocked":"true",
 		"semiMajorAxis":"1883812366.573522",
 		"eccentricity":"0.007973319796896609",
 		"inclination":"25.44080019822134",
@@ -262,6 +269,7 @@
 		"name":"Mimas",
 		"radius":"198200",
 		"stdGravParam":"2.503524000000e+9",
+		"tidallyLocked":"true",
 		"rotationPeriod":"81388.8",
 		"initialRotation":"0",
 		"semiMajorAxis":"186009285.9220490",
@@ -279,6 +287,7 @@
 		"name":"Enceladus",
 		"radius":"252100",
 		"stdGravParam":"7.211454165826e+9",
+		"tidallyLocked":"true",
 		"rotationPeriod":"118386.8352",
 		"initialRotation":"0",
 		"semiMajorAxis":"238413699.4838728",
@@ -296,6 +305,7 @@
 		"name":"Tethys",
 		"radius":"531100",
 		"stdGravParam":"4.121107782641e+10",
+		"tidallyLocked":"true",
 		"rotationPeriod":"163106.0928",
 		"initialRotation":"0",
 		"semiMajorAxis":"294973462.3804425",
@@ -313,6 +323,7 @@
 		"name":"Dione",
 		"radius":"561400",
 		"stdGravParam":"7.311636648732e+10",
+		"tidallyLocked":"true",
 		"rotationPeriod":"236469.456",
 		"initialRotation":"0",
 		"semiMajorAxis":"377650651.5017090",
@@ -330,6 +341,7 @@
 		"name":"Rhea",
 		"radius":"763800",
 		"stdGravParam":"1.539424643535e+11",
+		"tidallyLocked":"True",
 		"rotationPeriod":"390373.5168",
 		"initialRotation":"0",
 		"semiMajorAxis":"527212645.7071990",
@@ -348,6 +360,7 @@
 		"radius":"2573300",
 		"atmosphereHeight":"600000.0",
 		"stdGravParam":"8.9778648e+12",
+		"tidallyLocked":"true",
 		"rotationPeriod":"1377648",
 		"initialRotation":"0",
 		"semiMajorAxis":"1221966238.511425",
@@ -365,6 +378,7 @@
 		"name":"Iapetus",
 		"radius":"734500",
 		"stdGravParam":"1.205120887033e+11",
+		"tidallyLocked":"true",
 		"rotationPeriod":"6853377.6",
 		"initialRotation":"0",
 		"semiMajorAxis":"3560162593.022970",
@@ -400,6 +414,7 @@
 		"name":"Miranda",
 		"radius":"235700",
 		"stdGravParam":"4.319516899232100e+9",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"129880047.634175",
 		"eccentricity":"0.00118741261963413",
@@ -416,6 +431,7 @@
 		"name":"Ariel",
 		"radius":"578900",
 		"stdGravParam":"8.346344431770477e+10",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"190944364.477622",
 		"eccentricity":"0.00190951361476287",
@@ -448,6 +464,7 @@
 		"name":"Titania",
 		"radius":"788900",
 		"stdGravParam":"2.269437003741248e+11",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"436292682.967703",
 		"eccentricity":"0.002486916",
@@ -464,6 +481,7 @@
 		"name":"Oberon",
 		"radius":"761400",
 		"stdGravParam":"2.053234302535623e+11",
+		"tidallyLocked":"true",
 		"initialRotation":"0",
 		"semiMajorAxis":"583435328.340603",
 		"eccentricity":"0.00110558297330948",
@@ -499,6 +517,7 @@
 		"radius":"1353400",
 		"atmosphereHeight":"110000.0",
 		"stdGravParam":"1.427598140725034E+12",
+		"tidallyLocked":"true",
 		"rotationPeriod":"507773",
 		"initialRotation":"0",
 		"semiMajorAxis":"354767243.5406647",
@@ -534,6 +553,7 @@
 		"name":"Charon",
 		"radius":"603500",
 		"stdGravParam":"1.058799888601881e+11",
+		"tidallyLocked":"true",
 		"rotationPeriod":"551856.70656",
 		"initialRotation":"0",
 		"semiMajorAxis":"19596193.83540397",
