--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "plotly.js": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-plotly.js": "^2.5.1",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.3.0",
